[tool.poetry]
name = "prosper-api"
version = "0.1.3"
description = "Python trading library for Prosper.com"
authors = ["Graham Tibbitts <graham.tibbitts@gmail.com>"]
license = "apache-2.0"
readme = "README.md"
packages = [{include = "prosper_api"}]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]
repository = "https://github.com/grahamtt/prosper-api"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
toml = "^0.10.2"
dpath = "^2.1.6"
schema = "^0.7.5"
ratelimit = "^2.2.1"
backoff = "^2.2.1"
keyring = { version = "^24.2.0", optional = true }

[tool.poetry.group.dev.dependencies]
tox = "^4.11.3"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-sugar = "^0.9.7"
autohooks = "^23.7.0"
autohooks-plugin-black = "^23.7.0"
autohooks-plugin-pytest = "^23.4.0"
freezegun = "^1.2.2"
autohooks-plugin-isort = "^23.4.0"
autohooks-plugin-ruff = "^23.6.1"
pydoclint = "^0.3.8"
pydocstyle = "^6.3.0"
mutmut = "^2.4.4"


[tool.poetry.extras]
secure = ["keyring"]

[tool.pytest.ini_options]
addopts = "--cov=prosper_api --cov-report=term-missing --cov-fail-under=100"
testpaths = "tests"
python_functions = ["*_test", "test_*"]

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.ruff", "autohooks.plugins.isort", "hooks.pydocstyle", "hooks.pydoclint", "autohooks.plugins.pytest", "hooks.tox", "hooks.mutmut", ]

[tool.autohooks.plugins.ruff]
arguments = '--fix'

[tool.autohooks.plugins.pydocstyle]
include = 'prosper_api/*.py'

[tool.autohooks.plugins.pydoclint]
include = 'prosper_api/*.py'

[tool.pydocstyle]
inherit = false
convention = "google"
add_ignore = ['D100', 'D104']

[tool.pydoclint]
style="google"
allow-init-docstring=true

[tool.isort]
profile = "black"

[tool.autohooks.plugins.mutmut]
arguments = [
    "--disable-mutation-types=string,fstring,expr_stmt,annassign,number",
]

[tool.ruff.lint]
extend-ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
metadata = true
dirty = true
style = "pep440"
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"